http2/manifests/server.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: trailers
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: trailers
spec:
  ports:
  - name: http2 
    port: 8765
    targetPort: 8765
  selector:
    app: server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: trailers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: toilops/trailers
        name: server
        ports:
        - containerPort: 8765
          name: http
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 20m
            memory: 5Mi
