http2/manifests/server-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
  namespace: trailers
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/trailers-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8765
        host: server
